--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,14 @@ titlecase:      true             # Converts page and post titles to tilecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: 
+    - custom/asides/about.html
+    - asides/recent_posts.html
+    - asides/twitter.html
+    - asides/github.html
+    - asides/delicious.html
+    - asides/googleplus.html
+    #- asides/pinboard.html
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -56,26 +63,26 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user: alecchen
-github_repo_count: 3
+github_user:              alecchen
+github_repo_count:        3
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks:        true
 
 # Twitter
-twitter_user: alec929
-twitter_tweet_count: 3
-twitter_show_replies: false
-twitter_follow_button: true
+twitter_user:                alec929
+twitter_tweet_count:         3
+twitter_show_replies:        false
+twitter_follow_button:       true
 twitter_show_follower_count: false
-twitter_tweet_button: true
+twitter_tweet_button:        true
 
 # Google +1
-google_plus_one: true
+google_plus_one:      true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: 100775041785169167843
+googleplus_user:   100775041785169167843
 googleplus_hidden: false
 
 # Pinboard
@@ -87,7 +94,7 @@ delicious_user: alec929
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: alecchen
+disqus_short_name:         alecchen
 disqus_show_comment_count: true
 
 # Google Analytics
