--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ default_asides:
     - custom/asides/about.html
     - asides/recent_posts.html
     - asides/twitter.html
+    - custom/asides/lastfm.html
     - asides/github.html
     - asides/delicious.html
     - asides/googleplus.html
