--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,8 @@ google_analytics_tracking_id: UA-27420883-1
 
 # Facebook Like
 facebook_like: true
+
+# Last.fm
+lastfm_user:  alec929
+lastfm_count: 3
+lastfm_api:   dd446cc07133de4fadac35b1d2b5e7cc
